--- a/shippable.yml
+++ b/shippable.yml
@@ -1,11 +1,13 @@
-build_image: chetantarale/u14phppls:testtip
-
 language: php
 
+build_image: chetantarale/u12phppls:includesmultiplephpunit
+
 php: 
+  - 5.4
+  - 5.5
   - 5.6
   - '7.0'
-
+  
 services:
   - memcached
 
